# pict-26

./: .gitignore  Banking_anomalies.ipynb  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit2.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
backend/: cli.py  main.py
backend/config/: mongo.py
backend/routes/: analytics.py  transactions.py  upload.py
backend/services/: anomaly_engine.py  upload_service.py
client/src/lib/: api.ts
extras/: README.md  git config user.email "gguptapiyush45@gm  overview.txt
frontend/: tailwind.config.ts
frontend/client/src/hooks/: use-metrics.ts
frontend/client/src/services/: api.ts
